Fix animations on safari

--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -52,6 +52,7 @@
 .overlay.open {
     /*opacity: 1;*/
     visibility: visible;
+    animation: fadeIn 0.4s ease forwards;
 }
 
 .overlay ul {
@@ -94,10 +95,6 @@
     -webkit-transition:  all 1s ease;
     -moz-transition:  all 1s ease;
     -o-transition:  all 1s ease;
-}
-
-.overlay.open {
-    animation: fadeIn 0.4s ease forwards;
 }
 
 .overlay.open li {
